testdata/baselines/reference/submodule/compiler/nodeNextPackageSelfNameWithOutDir.errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
index.ts(1,21): error TS2307: Cannot find module '@this/package' or its corresponding type declarations.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== package.json (0 errors) ====
    {
      "name": "@this/package",
      "type": "module",
      "exports": {
        ".": "./dist/index.js"
      }
    }
==== index.ts (1 errors) ====
    import * as me from "@this/package";
                        ~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module '@this/package' or its corresponding type declarations.
    
    me.thing();
    
    export function thing(): void {}
    